TrainerTeam now extends from RCTApi TrainerModel (tweaked trainer npc registration)